[tool.poetry]
name = "wavefront"
version = "0.1.0"
description = ""
authors = ["Yuta Arita <k104009y@mail.kyutech.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
